<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:id="@+id/handleImageView"
        android:layout_margin="5dp"
        android:layout_above="@+id/firstLinearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLinearLayout"
        android:layout_above="@+id/secondLinearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filterButton"
            android:text="@string/filter"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/adjustButton"
            android:text="@string/adjust"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondLinearLayout"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTextButton"
            android:text="@string/addText"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enhanceButton"
            android:layout_marginBottom="5dp"
            android:text="@string/enhance"
            android:layout_weight="1" />
    </LinearLayout>


</RelativeLayout>
