<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/enhanceImageView"
        android:src="@drawable/study"
        android:layout_above="@+id/hueSeekBar" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/contrastTextView"
        android:layout_above="@+id/luminosityTextView"
        android:layout_margin="5dp"
        android:text="@string/hue"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/luminosityTextView"
        android:layout_above="@+id/saturationTextView"
        android:layout_margin="5dp"
        android:text="@string/luminosity"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/saturationTextView"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/saturation"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hueSeekBar"
        android:layout_toRightOf="@+id/saturationTextView"
        android:layout_above="@+id/luminositySeekBar"
        android:layout_margin="4dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/luminositySeekBar"
        android:layout_toRightOf="@+id/saturationTextView"
        android:layout_above="@+id/saturationSeekBar"
        android:layout_margin="4dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saturationSeekBar"
        android:layout_toRightOf="@+id/saturationTextView"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"/>


</RelativeLayout>
